--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -17,6 +17,9 @@
                 <table class="table table-striped border">
                     <tr class="col-3 table-secondary ">
                         <th>
+                            <label asp-for="Books.FirstOrDefault().Id"></label>
+                        </th>
+                        <th>
                             <label asp-for="Books.FirstOrDefault().Name"></label>
                         </th>
                         <th>
@@ -29,6 +32,9 @@
                     @foreach (var item in Model.Books)
                     {
                            <tr>
+                                <td>
+                                   @Html.DisplayFor(m=>item.Id)
+                               </td>
                                <td>
                                    @Html.DisplayFor(m=>item.Name)
                                </td>
@@ -39,8 +45,8 @@
                                    @Html.DisplayFor(m=>item.ISBN)
                                </td>
                                <td>
-                                   <button class="btn btn-danger btn-sm">Delete</button>
-                                   <a class="btn btn-success btn-sm">Edit</a>
+                                   <button asp-page-handler="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to Delete?')" class="btn btn-danger btn-sm">Delete</button>
+                                   <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm">Edit</a>
                                </td>
                            </tr>
                     }
